Added Color Palette
Picked a color palette. Added Controls icons. Created consistent user
interface elements.

--- a/Rooms/engine.cfg
+++ b/Rooms/engine.cfg
@@ -6,8 +6,9 @@ icon="res://icon.png"
 
 [display]
 
+fullscreen=true
+stretch_mode="2d"
 width=512
-stretch_mode="viewport"
 stretch_aspect="keep"
 height=512
 
@@ -17,4 +18,4 @@ select_block=[mbutton(0, 1), mbutton(0, 2)]
 
 [render]
 
-default_clear_color=#ff1f1f1f
+default_clear_color=#ff141414
