--- a/Rooms/engine.cfg
+++ b/Rooms/engine.cfg
@@ -1,8 +1,8 @@
 [application]
 
-name="Rooms"
+name="A Virtuous Circle"
 main_scene="res://main.tscn"
-icon="res://icon.png"
+icon="res://virtuousiconsmall.png"
 
 [display]
 
