Relaxed the Rules.

--- a/Rooms/engine.cfg
+++ b/Rooms/engine.cfg
@@ -6,7 +6,7 @@ icon="res://virtuousiconsmall.png"
 
 [display]
 
-fullscreen=true
+fullscreen=false
 stretch_mode="2d"
 width=512
 stretch_aspect="keep"
@@ -18,4 +18,4 @@ select_block=[mbutton(0, 1), mbutton(0, 2)]
 
 [render]
 
-default_clear_color=#ff141414
+default_clear_color=#ff2b2b2b
