--- a/Rooms/export.cfg
+++ b/Rooms/export.cfg
@@ -265,7 +265,7 @@ application/version="1.0"
 custom_package/debug=""
 custom_package/release=""
 debug/debugging_enabled=true
-display/high_res=false
+display/high_res=true
 
 [platform:Windows Desktop]
 
