--- a/Rooms/engine.cfg
+++ b/Rooms/engine.cfg
@@ -14,7 +14,8 @@ height=512
 
 [input]
 
-select_block=[mbutton(0, 1), mbutton(0, 2)]
+select_block=[mbutton(0, 1)]
+rotate_block=[mbutton(0, 2)]
 
 [render]
 
